--- a/entity_registry.yaml
+++ b/entity_registry.yaml
@@ -1,380 +1,485 @@
 sensor.theresas_iphone_battery_state:
+  config_entry_id:
   name:
   platform: ios
   unique_id: state_Theresa
 sensor.john_battery_state:
+  config_entry_id:
   name:
   platform: ios
   unique_id: state_JMussell
 sensor.john_battery_level:
+  config_entry_id:
   name:
   platform: ios
   unique_id: level_JMussell
 sensor.theresas_iphone_battery_level:
+  config_entry_id:
   name:
   platform: ios
   unique_id: level_Theresa
 lock.garageintlock_locked:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077282304
 sensor.garageintlock_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077528065
 sensor.garageintlock_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077528081
 sensor.garageintlock_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077528097
 sensor.garageintlock_access_control:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077528209
 sensor.garageintlock_burglar:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077528225
 sensor.garageintlock_power_management:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077528241
 sensor.garageintlock_system:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 2-72057594077528257
 binary_sensor.basementextdoor_sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 3-72057594093240320
 sensor.basementextdoor_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 3-72057594094305281
 sensor.basementextdoor_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 3-72057594094305297
 sensor.basementextdoor_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 3-72057594094305313
 sensor.basementextdoor_burglar:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 3-72057594094305441
 sensor.thermostat_temperature:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 5-72057594126811154
 climate.thermostat_heating_1:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 5-72057594127106066
 climate.thermostat_cooling_1:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 5-72057594127106082
 climate.thermostat_furnace:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 5-72057594127106162
 climate.thermostat_dry_air:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 5-72057594127106178
 binary_sensor.basementwatersensor_sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 6-72057594143571968
 sensor.basementwatersensor_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 6-72057594144636929
 sensor.basementwatersensor_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 6-72057594144636945
 sensor.basementwatersensor_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 6-72057594144636961
 sensor.basementwatersensor_flood:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 6-72057594144637057
 binary_sensor.deckdoorsensor_sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 7-72057594160349184
 sensor.deckdoorsensor_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 7-72057594161414145
 sensor.deckdoorsensor_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 7-72057594161414161
 sensor.deckdoorsensor_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 7-72057594161414177
 sensor.deckdoorsensor_burglar:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 7-72057594161414305
 binary_sensor.basementmultisensor6_sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594177126400
 sensor.basementmultisensor6_temperature:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594177142802
 sensor.basementmultisensor6_luminance:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594177142834
 sensor.basementmultisensor6_relative_humidity:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594177142866
 sensor.basementmultisensor6_ultraviolet:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594177143218
 sensor.basementmultisensor6_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594178191361
 sensor.basementmultisensor6_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594178191377
 sensor.basementmultisensor6_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594178191393
 sensor.basementmultisensor6_burglar:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 8-72057594178191521
 binary_sensor.frontdoorsensor_sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 9-72057594193903616
 sensor.frontdoorsensor_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 9-72057594194968577
 sensor.frontdoorsensor_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 9-72057594194968593
 sensor.frontdoorsensor_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 9-72057594194968609
 sensor.frontdoorsensor_burglar:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 9-72057594194968737
 binary_sensor.garageintdoorsensor_sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 10-72057594210680832
 sensor.garageintdoorsensor_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 10-72057594211745793
 sensor.garageintdoorsensor_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 10-72057594211745809
 sensor.garageintdoorsensor_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 10-72057594211745825
 sensor.garageintdoorsensor_burglar:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 10-72057594211745953
 switch.alarmkeypad_switch:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 11-72057594227277824
 sensor.alarmkeypad_alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 11-72057594228523009
 sensor.alarmkeypad_alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 11-72057594228523025
 sensor.alarmkeypad_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 11-72057594228523041
 sensor.alarmkeypad_access_control:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 11-72057594228523153
 sensor.alarmkeypad_burglar:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 11-72057594228523169
 switch.siren_switch:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 12-72057594244055040
 switch.garageextlights_switch:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311163904
 sensor.garageextlights_energy:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311376898
 sensor.garageextlights_previous_reading:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311376914
 sensor.garageextlights_power:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311377026
 sensor.garageextlights_previous_reading_2:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311377042
 sensor.garageextlights_voltage:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311377154
 sensor.garageextlights_previous_reading_3:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311377170
 sensor.garageextlights_current:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311377218
 sensor.garageextlights_previous_reading_4:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 16-72057594311377234
 sensor.allergy_index_forecasted_average:
+  config_entry_id:
   name:
   platform: pollen
   unique_id: 14001_allergy_index_forecasted_average
 sensor.allergy_index_today:
+  config_entry_id:
   name:
   platform: pollen
   unique_id: 14001_allergy_index_today
 sensor.allergy_index_historical_average:
+  config_entry_id:
   name:
   platform: pollen
   unique_id: 14001_allergy_index_historical_average
 sensor.allergy_index_tomorrow:
+  config_entry_id:
   name:
   platform: pollen
   unique_id: 14001_allergy_index_tomorrow
 sensor.allergy_index_yesterday:
+  config_entry_id:
   name:
   platform: pollen
   unique_id: 14001_allergy_index_yesterday
 sensor.cold__flu_forecasted_average:
+  config_entry_id:
   name:
   platform: pollen
   unique_id: 14001_cold__flu_forecasted_average
 sensor.johns_iphone_battery_level:
+  config_entry_id:
   name:
   platform: ios
   unique_id: level_alarm_panel
 sensor.johns_iphone_battery_state:
+  config_entry_id:
   name:
   platform: ios
   unique_id: state_alarm_panel
 sensor.zachs_ipad_battery_level:
+  config_entry_id:
   name:
   platform: ios
   unique_id: level_zachs_ipad
 sensor.zachs_ipad_battery_state:
+  config_entry_id:
   name:
   platform: ios
   unique_id: state_zachs_ipad
 zwave.aeotec_dsa02203_zstick_s2:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-1
 zwave.garageintlock:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-2
 zwave.basementextdoor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-3
 zwave.thermostat:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-5
 zwave.basementwatersensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-6
 zwave.deckdoorsensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-7
 zwave.basementmultisensor6:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-8
 zwave.frontdoorsensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-9
 zwave.garageintdoorsensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-10
 zwave.alarmkeypad:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-11
 zwave.siren:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-12
 zwave.garageextlights:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-16
 binary_sensor.sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 13-72057594261012480
 sensor.alarm_type:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 13-72057594262077441
 sensor.alarm_level:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 13-72057594262077457
 sensor.aeotec_dsb45_water_sensor_sourcenodeid:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 13-72057594262077473
 sensor.aeotec_dsb45_water_sensor_flood:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: 13-72057594262077569
 zwave.aeotec_dsb45_water_sensor:
+  config_entry_id:
   name:
   platform: zwave
   unique_id: node-13
+sensor.john_battery_state_2:
+  config_entry_id:
+  name:
+  platform: ios
+  unique_id: state_John
+sensor.john_battery_level_2:
+  config_entry_id:
+  name:
+  platform: ios
+  unique_id: level_John
