--- a/notify.yaml
+++ b/notify.yaml
@@ -3,5 +3,5 @@
 - name: ios_group_notify
   platform: group
   services:
-    - service: ios_john
+    - service: ios_john_
     - service: ios_theresa
